--- a/diplom/index.html
+++ b/diplom/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Выборы</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 	<!-- Main Page -->
@@ -31,7 +32,7 @@
 			</div>
 			<div class="main-cards-item ">
 				<div class="candidate-block">
-					<div class="photo photo-2"></div>
+					<div class="photo photo-2" ></div>
 					<div class="result">
 						<div class="result-count">65%</div>
 						<div class="progress">
@@ -172,7 +173,8 @@
 		-->
 		</div>
 	</div>
-<script src="js/part/modal.js"></script>
-<script src="js/part/custom.js"></script>
+<script src="js/script.js"></script>
+
+
 </body>
 </html>
