--- a/diplom/index.html
+++ b/diplom/index.html
@@ -13,7 +13,7 @@
 			<div class="main-cards-item main-cards-item-active">
 				<div class="candidate-block">
 					<div class="photo photo-1"></div>
-					<div class="result">
+					<div id="res1" class="result">
 						<div class="result-count">35%</div>
 						<div class="progress">
 							<div class="progress-bar progress-bar-1"></div>
@@ -33,7 +33,7 @@
 			<div class="main-cards-item ">
 				<div class="candidate-block">
 					<div class="photo photo-2" ></div>
-					<div class="result">
+					<div id="res2" class="result">
 						<div class="result-count">65%</div>
 						<div class="progress">
 							<div class="progress-bar progress-bar-2"></div>
