--- a/diplom/index.html
+++ b/diplom/index.html
@@ -10,7 +10,7 @@
 	<!-- Main Page -->
 	<div class="main">
 		<div class="main-cards">
-			<div class="main-cards-item main-cards-item-active">
+			<div id="frame1" class="main-cards-item main-cards-item-active">
 				<div class="candidate-block">
 					<div class="photo photo-1"></div>
 					<div id="res1" class="result">
@@ -30,7 +30,7 @@
 				Биография
 				<div class="bio">13 декабря 2016 года объявил, что намерен баллотироваться на президентских выборах 2018 года, опубликовал основные положения своей предвыборной программы и начал собирать сторонников</div>
 			</div>
-			<div class="main-cards-item ">
+			<div id="frame2" class="main-cards-item ">
 				<div class="candidate-block">
 					<div class="photo photo-2" ></div>
 					<div id="res2" class="result">
