--- a/diplom/index.html
+++ b/diplom/index.html
@@ -173,6 +173,8 @@
 		-->
 		</div>
 	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="js/script.js"></script>
 
 
